make *roject compatible with Java 8 for *ildFly setup